fékk script til að virka

--- a/styles.scss
+++ b/styles.scss
@@ -14,8 +14,13 @@
 html { /* stylelint-disable-line */
   box-sizing: border-box;
   overflow-x: hidden;
+  
 
   // TODO fleiri grunn stillingar
+}
+
+h1{
+  font-size: 100px;
 }
 
 
