--- a/styles.scss
+++ b/styles.scss
@@ -14,14 +14,19 @@
 html { /* stylelint-disable-line */
   box-sizing: border-box;
   overflow-x: hidden;
+  font-size: 16px;
   
 
   // TODO fleiri grunn stillingar
 }
 
+main {
+  max-width: 1200px
+}
 
 
 
 
 // TODO sækja allar sass skrár
 // @import "scss/...";
+@import "scss/footer.scss"
