bætti við vorur row og col í cart.html, bætti við í main í styles.scss.

--- a/scss/vorur.scss
+++ b/scss/vorur.scss
@@ -3,6 +3,15 @@
     border-radius: 3px;
 }
 
+.vorur{
+    &__row{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        font-family: "helvetica";
+        max-width: 1200px;
+    }
+}
 .vara{
     display: flex;
     
