--- a/styles.scss
+++ b/styles.scss
@@ -20,8 +20,10 @@ html { /* stylelint-disable-line */
   // TODO fleiri grunn stillingar
 }
 
-main {
-  max-width: 1200px
+main { /* stylelint-disable-line */
+  // max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 
