lét footer fylgja BEM reglum, byrjaði aðeins á header

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,28 +1,41 @@
-footer {
-    background-color: #00b7ff;
-    padding: 20px 0;
-    
-}
-.list__row {
-    display: flex;
-    justify-content: space-around;
-    font-family: "helvetica";
-    max-width: 1200px;
-}
-li {
-    list-style: none; 
-    color: #fffcf2;
-    line-height: 2em;  
-    font-size:  0.75em;
+$headerColor: #ff5000;
+$footerColor: #00b7ff;
+$blackText: #000000;
+$whiteText: #fffcf2;
 
-  }
-.list__title {
-    margin-bottom: 10px;
-    font-weight: bold;
-    color: #000000;
-    font-size: 1em;
+footer {
+    background-color: $footerColor;
+    padding: 20px 0;
+
+    .footer{
+        &__row {
+            display: flex;
+            justify-content: space-around;
+            font-family: "helvetica";
+            max-width: 1200px;
+            li {
+                list-style: none; 
+                color: $whiteText;
+                line-height: 2em;  
+                font-size:  0.75emx
+              }
+        }
+
+        &__title {
+            margin-bottom: 10px;
+            font-weight: bold;
+            color: $blackText;
+            font-size: 1em;
+        }   
+    }
+
+    .trademark {
+        margin-top: 10px;
+        text-align: center;
+    }
+
 }
-.trademark {
-    margin-top: 10px;
-    text-align: center;
-}
+
+
+
+
