--- a/styles.scss
+++ b/styles.scss
@@ -31,5 +31,6 @@ main { /* stylelint-disable-line */
 
 // TODO sækja allar sass skrár
 // @import "scss/...";
+@import "scss/header.scss";
 @import "scss/footer.scss";
 @import "scss/vorur.scss";
