kláraði að gera vörur.scss skjalið að bestu getu og breyta til cart.html að því sniði'

--- a/scss/vorur.scss
+++ b/scss/vorur.scss
@@ -4,6 +4,9 @@
 }
 
 .vorur{
+    display: flex;
+    justify-content: center;
+
     &__row{
         display: flex;
         flex-wrap: wrap;
@@ -16,7 +19,7 @@
     display: flex;
     
     &__image{
-        max-width: 33.33%;
+        width: 33.33%;
         
     }
     
