--- a/scss/vorur.scss
+++ b/scss/vorur.scss
@@ -17,9 +17,11 @@
 }
 .vara{
     display: flex;
+    flex-direction: column;
+
     
     &__image{
-        width: 33.33%;
+        width: 100%;
         
     }
     
@@ -27,6 +29,10 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+    }
+
+    &__uppi{
+        margin-bottom: 20px;
     }
     
     &__heiti{
@@ -44,18 +50,45 @@
         display: flex;
         
     }
-    &__fjoldi--input{
-        @include rounded;
-        padding: 10px;
-        width: 20%;
-    }
-    &__takki{
-        @include rounded;
-        padding: 10px;
-        &--karfa{
-            max-height: 12px;
+
+    &__moguleikar{
+        display: flex;
+        flex-direction: column;
+        &__vorur{
+            &__fjoldi--input{
+                @include rounded;
+                padding: 10px;
+                margin-right: 10px;
+                width: 60%;
+            }
+            &__takki{
+                @include rounded;
+                padding: 10px;
+                margin-right: 10px;
+                width: 30%;
+                &--karfa{
+                    max-height: 12px;
+                }
+            }
+        }
+        &__karfa{
+            &__fjoldi--input{
+                @include rounded;
+                padding: 10px;
+                margin-right: 10px;
+                width: 25%;
+            }
+            &__takki{
+                @include rounded;
+                padding: 10px;
+                margin-right: 10px;
+                &--karfa{
+                    max-height: 12px;
+                }
+            }
         }
     }
+    
 
 }
 
