--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,7 @@
 
 * {
   padding: 0;
-  margin: 0;
+  margin: 0;  
 }
 
 *,
@@ -34,3 +34,4 @@ main { /* stylelint-disable-line */
 @import "scss/header.scss";
 @import "scss/footer.scss";
 @import "scss/vorur.scss";
+@import "scss/course.scss";
