--- a/styles.scss
+++ b/styles.scss
@@ -21,10 +21,11 @@ html { /* stylelint-disable-line */
 }
 
 main { /* stylelint-disable-line */
-  // max-width: 1200px;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 20px
 }
+
+
 
 
 
