--- a/scss/course.scss
+++ b/scss/course.scss
@@ -7,6 +7,11 @@ img {
     width: 100%;
     height: 100%;
 }
+.main{
+    display:flex;
+    justify-content: center;
+
+}
 .main__grid {
     margin-top: 10px;
     display: grid;
@@ -14,7 +19,9 @@ img {
     grid-template-rows: 50% 50%;
     grid-auto-rows: 100px; 
     grid-gap: 1em;
-
+    max-width:1200px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .main__grid > div {
@@ -61,7 +68,9 @@ img {
 }
 button{
     margin-top: 20px;
-    align-items: center;
+    position: relative;
+    left: 46vw;
 }
+
 
 
