--- a/scss/header.scss
+++ b/scss/header.scss
@@ -12,7 +12,7 @@ header {
     h1{
         font-size: 3.75em;
         color: $blackText;
-        margin-bottom: 100px;
+        margin-top:10px;
     }
     ul {
         
