staff og forsida, lagað html, grid ofl

--- a/styles.scss
+++ b/styles.scss
@@ -35,3 +35,5 @@ main { /* stylelint-disable-line */
 @import "scss/footer.scss";
 @import "scss/vorur.scss";
 @import "scss/course.scss";
+@import "scss/forsida.scss";
+@import "scss/staff.scss";
