--- a/scss/course.scss
+++ b/scss/course.scss
@@ -1,77 +1,88 @@
 $headerColor: #ff5000;
 $footerColor: #00b7ff;
-$blackText: #000000;
+$blackText: #000;
 $whiteText: #fffcf2;
 
-
-.main{
-    display:flex;
-    justify-content: center;
+.main {
+  display: flex;
+  justify-content: center;
 
 }
+
 .main__grid {
-    margin-top: 10px;
-    display: grid;
-    grid-template-columns: 50% 50%; 
-    grid-template-rows: 50% 50%;
-    grid-auto-rows: 100px; 
-    grid-gap: 1em;
-    max-width:1200px;
-    margin-left: 10px;
-    margin-right: 10px;
-    img {
-        width: 100%;
-        height: 100%;
-    }
+  display: grid;
+  max-width: 1200px;
+  margin-top: 10px;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+  grid-auto-rows: 100px;
+  grid-gap: 1em;
+  margin-right: 10px;
+  margin-left: 10px;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .main__grid > div {
-    h2 {
-        margin-bottom: 20px;
-    }
-    p, label {
-        font-size: 0.75em;
-    }
-}
-.main__grid-1, .main__grid-3, .main__grid-4{
-    padding:10px;
+  h2 {
+    margin-bottom: 20px;
+  }
+  
+  p,
+  label {
+    font-size: 0.75em;
+  }
 }
 
-.main__grid-3-content{
-    display: grid;
-    grid-template-columns: 33% 67%;
-    justify-items: stretch;
-    padding-right: 20%;
-    div {
-        margin-bottom: 10px;
-    }
-    input, select {
-        width: 100%;
-    }
-} 
+.main__grid-1,
+.main__grid-3,
+.main__grid-4 {
+  padding: 10px;
+}
+
+.main__grid-3-content {
+  display: grid;
+  grid-template-columns: 33% 67%;
+  justify-items: stretch;
+  padding-right: 20%;
+
+  div {
+    margin-bottom: 10px;
+  }
+
+  input,
+  select {
+    width: 100%;
+  }
+
+}
+
 .main__grid-4-content {
-    display: grid;
-    grid-template-columns:33% 67%;
-    padding-right: 20%;
-    div {
-        margin-bottom:10px;
-    }
-    input {
-        width: 100%;
-    }
+  display: grid;
+  grid-template-columns: 33% 67%;
+  padding-right: 20%;
 
+  div {
+    margin-bottom: 10px;
+  }
+
+  input {
+    width: 100%;
+  }
 }
+
 .main__grid-4-content-2 {
-    display: grid;
-    padding-right: 20%;
-    grid-template-columns: 21% 21% 21% 21% 21%;
-    align-items: center;
-}
-button{
-    margin-top: 20px;
-    position: relative;
-    left: 46vw;
+  display: grid;
+  padding-right: 20%;
+  grid-template-columns: 21% 21% 21% 21% 21%;
+  align-items: center;
 }
 
-
-
+button {
+  position: relative;
+  left: 46vw;
+  margin-top: 20px;
+}
