breytti utlit moppu og course.html button

--- a/scss/course.scss
+++ b/scss/course.scss
@@ -30,7 +30,7 @@ $whiteText: #fffcf2;
   h2 {
     margin-bottom: 20px;
   }
-  
+
   p,
   label {
     font-size: 0.75em;
@@ -81,7 +81,7 @@ $whiteText: #fffcf2;
   align-items: center;
 }
 
-button {
+.grid__button {
   position: relative;
   left: 46vw;
   margin-top: 20px;
