--- a/scss/config.scss
+++ b/scss/config.scss
@@ -1,1 +1,9 @@
 // TODO stillingar hér
+$headerColor: #ff5000;
+$footerColor: #00b7ff;
+$blackText: #000000;
+$whiteText: #fffcf2;
+$font : 16px;
+$gutter : 20px;
+$Oswald : 'Oswald', serif;
+$Open : 'Open Sans', serif;
