bætti við import á grid.scss

--- a/styles.scss
+++ b/styles.scss
@@ -37,3 +37,5 @@ main { /* stylelint-disable-line */
 @import "scss/course.scss";
 @import "scss/forsida.scss";
 @import "scss/staff.scss";
+@import "scss/grid.scss";
+
