--- a/scss/forsida.scss
+++ b/scss/forsida.scss
@@ -1,38 +1,31 @@
+@import "config";
 .index {
   font-family: "Open Sans", serif;
-  &__card {
+
+  &__card{
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100%;
+
+    padding-top: 40px;
   }
-  &__img {
+
+  &__info {
+    
+  }
+
+  &__img{
     width: 100%;
     height: auto;
   }
+
   &__title {
-    font-family: "Oswald", sans-serif;
+    font-family: $Oswald;
     font-weight: 600;
     font-size: 35px;;
   }
   &__description {
     padding: 40px 0;
   }
-}
-
-.index__grid {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.index__row{
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -10px;
-  margin-right: -10px;
-}
-.index__col{
-  padding-left: 10px;
-  padding-right: 10px;
 }
