--- a/styles.scss
+++ b/styles.scss
@@ -29,3 +29,4 @@ main { /* stylelint-disable-line */
 @import "scss/footer.scss";
 @import "scss/vorur.scss";
 @import "scss/course.scss";
+@import "scss/fyllaUt.scss";
