--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -4,8 +4,12 @@
     max-width: 1200px;
     margin: 0 auto;
     padding-left: 20px;
-    padding-right: 20px; 
-}
+    padding-right: 20px; }
+    @media (min-width: 1199px){
+        .grid {
+            padding: 0;
+        }
+    }
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -16,5 +20,44 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+.col1 {
+    width: 100%; }
+.col3 {
+    width: 50%; }
+.col4 {
+    width: 33.333%; }
+.col5 {
+    width: 25%; }
+.offset3 {
+    margin-left: 50%; }
+.offset4 {
+    margin-left: 33.333%; }
+.offset0 {
+    margin-left: 0; }
+@media (min-width: 640px) {
+    .col--Big1 {
+      width: 100%; }
+    .col--Big2 {
+      width: 66.666%; }
+    .col--Big3 {
+      width: 50%; }
+    .col--Big4 {
+      width: 33.333%; }
+    .col--Big5 {
+      width: 25%; }
+    .col--Big6 {
+      width: 16.666%; }
+    .offset--Big4 {
+      margin-left: 33.33%; }
+    .offset--Big6 {
+      margin-left: 16.666%; } }
+  
+  @media (min-width: 951px) {
+    .col--Bigger4 {
+      width: 33.333%; }
+    .col--Bigger5 {
+      width: 25%; }
+    .offset--Bigger6 {
+      margin-left: 16.666%; } }
 
 
