--- a/scss/course.scss
+++ b/scss/course.scss
@@ -3,6 +3,15 @@ $footerColor: #00b7ff;
 $blackText: #000;
 $whiteText: #fffcf2;
 
+.grid__button{
+  position: relative;
+  left: 46vw;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
+@media(max-width:599px){
 .main {
   display: flex;
   justify-content: center;
@@ -13,8 +22,8 @@ $whiteText: #fffcf2;
   display: grid;
   max-width: 1200px;
   margin-top: 10px;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(4, 1fr);
   grid-auto-rows: 100px;
   grid-gap: 1em;
   margin-right: 10px;
@@ -47,7 +56,7 @@ $whiteText: #fffcf2;
   display: grid;
   grid-template-columns: 33% 67%;
   justify-items: stretch;
-  padding-right: 20%;
+  
 
   div {
     margin-bottom: 10px;
@@ -62,8 +71,7 @@ $whiteText: #fffcf2;
 
 .main__grid-4-content {
   display: grid;
-  grid-template-columns: 33% 67%;
-  padding-right: 20%;
+  grid-template-columns: repeat(6, 1fr);
 
   div {
     margin-bottom: 10px;
@@ -72,17 +80,157 @@ $whiteText: #fffcf2;
   input {
     width: 100%;
   }
+  &-cardnumber{
+      grid-column:1;
+      grid-row:1;
+  }
+  &-cardnumber-input{
+    grid-column:3/7;
+    grid-row:1;
+  }
+  &-cardowner{
+    grid-column:1;
+    grid-row:2;
+  }
+  &-cardowner-input{
+    grid-column:3/7;
+    grid-row:2;
+  }
+  &-col-1{
+    grid-column:1;
+    grid-row:3;
+  }
+  &-col-2{
+    grid-column:3/4;
+    grid-row:3;
+  }
+  &-col-3{
+    grid-column:4/5;
+    grid-row:3;
+  }
+  &-col-4{
+    grid-column:5/6;
+    grid-row:3;
+  }
+  &-col-5{
+    grid-column:6/7;
+    grid-row:3;
+  }
+
+
 }
 
-.main__grid-4-content-2 {
-  display: grid;
-  padding-right: 20%;
-  grid-template-columns: 21% 21% 21% 21% 21%;
-  align-items: center;
-}
 
-.grid__button {
-  position: relative;
-  left: 46vw;
-  margin-top: 20px;
 }
+@media(min-width:600px){
+    .main {
+      display: flex;
+      justify-content: center;
+    
+    }
+    
+    .main__grid {
+      display: grid;
+      max-width: 1200px;
+      margin-top: 10px;
+      grid-template-columns: 50% 50%;
+      grid-template-rows: 50% 50%;
+      grid-auto-rows: 100px;
+      grid-gap: 1em;
+      margin-right: 10px;
+      margin-left: 10px;
+    
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    
+    .main__grid > div {
+      h2 {
+        margin-bottom: 20px;
+      }
+    
+      p,
+      label {
+        font-size: 0.75em;
+      }
+    }
+    
+    .main__grid-1,
+    .main__grid-3,
+    .main__grid-4 {
+      padding: 10px;
+    }
+    
+    .main__grid-3-content {
+      display: grid;
+      grid-template-columns: 33% 67%;
+      justify-items: stretch;
+     
+    
+      div {
+        margin-bottom: 10px;
+      }
+    
+      input,
+      select {
+        width: 100%;
+      }
+    
+    }
+    
+    .main__grid-4-content {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr)
+      
+    
+      input {
+        width: 100%;
+      }
+     input{
+       width:100%;
+     }
+    &-cardnumber{
+        grid-column:1;
+        grid-row:1;
+    }
+    &-cardnumber-input{
+      grid-column:3/7;
+      grid-row:1;
+    }
+    &-cardowner{
+      grid-column:1;
+      grid-row:2;
+    }
+    &-cardowner-input{
+      grid-column:3/7;
+      grid-row:2;
+    }
+    &-col-1{
+      grid-column:1;
+      grid-row:3;
+    }
+    &-col-2{
+      grid-column:3/4;
+      grid-row:3;
+    }
+    &-col-3{
+      grid-column:4/5;
+      grid-row:3;
+    }
+    &-col-4{
+      grid-column:5/6;
+      grid-row:3;
+    }
+    &-col-5{
+      grid-column:6/7;
+      grid-row:3;
+    }
+    }
+    
+    
+    
+    
+    }
+
