--- a/scss/forsida.scss
+++ b/scss/forsida.scss
@@ -1,14 +1,13 @@
 @import "config";
-
-
 .index {
-  font-family: "Open Sans", serif;
+  font-family: $Open;
 
   &__card{
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100%;
+    
 
     padding-top: 40px;
     transition: $transition;
