--- a/scss/staff.scss
+++ b/scss/staff.scss
@@ -1,51 +1,57 @@
+@import "config";
 .staff {
-    &__about {
+    &__cards {
+        margin: 0 auto;
+        width: 100%;
+
         display: flex;
-        align-items: center;
-        margin-top: 20px;
+        flex-flow: row wrap;
     }
     &__card {
+        transition: $transition;
 
+        display: flex;
+        flex-direction: column;
+        display: inline-block;
+        align-items: center; 
+    }
+    &__about {
+        margin-top: 20px;
+        width: 100%;
+
+        align-items: center;
     }
     &__card:hover &__img{
-        color: white;
+        visibility: hidden;
+    }
+    &__card:hover &__person{
+        visibility: visible;
+
+        font-family: $Open;
+        text-align: center;
+
+        width: 100%;
     }
     &__img{
         width: 100%;
         height: 100%;
+
+        backface-visibility: hidden;
     }
     &__person{
-        font-family: "Open Sans", serif;
-        text-align: center;
-        
-        display: flex;
-        display: inline-block;
-        position: absolute;
-        flex-direction: column;
-    
-        width: 100%;
+        font-family: $Open;
 
         visibility: hidden;
+        margin: 0 auto;
+        width: 100%;
+
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
     }
     &__name {
-        font-family: "Oswald", sans-serif;
+        font-family: $Oswald;
         margin-bottom: 20px;
     }
-    &__row {
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: -10px;
-        margin-right: -10px;
-    }
-    &__col {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-}
-.staff__grid {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
