--- a/scss/vorur.scss
+++ b/scss/vorur.scss
@@ -23,21 +23,19 @@
 .vara {
   display: flex;
   flex-direction: column;
-  @media(min-width: 700px){
-    flex-direction: row;
-  }
+  height: 100%;
+  
 
   &__image {
     width: 100%;
-    @media(min-width: 700px){
-      width: 33%;
-    }
+    
   }
 
   &__innihald {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    height: 100%;
     padding-right: 10px;
     padding-left: 10px;
   }
@@ -104,4 +102,8 @@
       }
     }
   }
+}
+
+.dir--row{
+  flex-direction: row;
 }
