--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,3 @@
-@import "scss/config";
 
 * {
   padding: 0;
@@ -33,4 +32,5 @@ main { /* stylelint-disable-line */
 @import "scss/forsida.scss";
 @import "scss/staff.scss";
 @import "scss/grid.scss";
+@import "scss/config.scss";
 
