--- a/scss/config.scss
+++ b/scss/config.scss
@@ -5,16 +5,14 @@ $blackText: #000000;
 $whiteText: #fffcf2;
 $font : 16px;
 $gutter : 20px;
-$Oswald : 'Oswald', serif;
-$Open : 'Open Sans', serif;
+$Oswald : "Oswald", sans-serif;
+$Open : "Open Sans", serif;
 $transition: all 300ms ease-in-out 0s;
 
 @mixin rounded {
     border: 1px solid #000;
     border-radius: 3px;
   }
-<<<<<<< HEAD
-=======
 
   .blue__button {
    
@@ -30,4 +28,3 @@ $transition: all 300ms ease-in-out 0s;
     background-color: $headerColor;
     color: $footerColor;
   }
->>>>>>> 4bc42d4c031c99a6190409f8e4dd9efa789bc86e
