--- a/scss/staff.scss
+++ b/scss/staff.scss
@@ -1,36 +1,15 @@
-@import "config";
+@import "config.scss";
 .staff {
-    &__cards {
-        margin: 0 auto;
-        width: 100%;
-
-        display: flex;
-        flex-flow: row wrap;
-    }
-    &__card {
-        transition: $transition;
-
-        display: flex;
-        flex-direction: column;
-        display: inline-block;
-        align-items: center; 
-    }
     &__about {
+        display: flex;
         margin-top: 20px;
-        width: 100%;
-
         align-items: center;
-    }
-    &__card:hover &__img{
-        visibility: hidden;
-    }
-    &__card:hover &__person{
-        visibility: visible;
-
-        font-family: $Open;
-        text-align: center;
-
         width: 100%;
+        transform-style: preserve-3d;
+        transition: all 300ms ease-in-out; 
+    }
+    &__card:hover &__about{
+        transform: rotateY(180deg);
     }
     &__img{
         width: 100%;
@@ -39,18 +18,17 @@
         backface-visibility: hidden;
     }
     &__person{
-        font-family: $Open;
-
-        visibility: hidden;
-        margin: 0 auto;
+        font-family: "Open Sans", serif;
+        position: absolute;
+        display: block;
         width: 100%;
-
-        display: flex;
-        flex-flow: row wrap;
-        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        backface-visibility: hidden;
+        transform: rotateY(180deg);
     }
     &__name {
-        font-family: $Oswald;
+        font-family: "Oswald", sans-serif;
         margin-bottom: 20px;
     }
 }
