--- a/scss/vorur.scss
+++ b/scss/vorur.scss
@@ -1,5 +1,29 @@
 @import "config.scss";
 
+.takki {
+  display: flex;
+  justify-content: center;
+}
+
+.titill {
+  &__row {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+  }
+
+  &__col {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    max-width: 1200px;
+  }
+
+  &__texti {
+    font-size: 3em;
+  }
+}
+
 .vorur {
   display: flex;
   justify-content: center;
@@ -14,6 +38,7 @@
 
   &__col{
     width: 100%;
+    margin-bottom: 30px;
   }
 }
 
@@ -25,6 +50,7 @@
   flex-direction: column;
   height: 100%;
   
+  
 
   &__image {
     width: 100%;
@@ -34,7 +60,7 @@
   &__innihald {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 100%;
     padding-right: 10px;
     padding-left: 10px;
@@ -104,6 +130,8 @@
   }
 }
 
-.dir--row{
-  flex-direction: row;
+@media(min-width: 640px){
+  .dir--row{
+    flex-direction: row;
+  }
 }
