--- a/scss/course.scss
+++ b/scss/course.scss
@@ -7,22 +7,29 @@
   margin-bottom: 20px;
 }
 
-
-@media(max-width:599px){
-.course {
+.course{
   display: flex;
   justify-content: center;
+
+  &__title{
+  margin-bottom:20px;
+  font-family: 'Oswald', serif;
+  font-size:35px;
+}
+&__text{
+  font-family: 'Open Sans', serif;
   
-  &__title {
-    font-family: $Oswald;
-
-  &__text{
-    font-family: $Open;
-  }
-
+}
+&__box{
+  margin-bottom:10px;
+  width:80%;
 }
 
-.course__grid {
+&__img {
+  width: 100%;
+  height: 100%;
+}
+  &__grid {
   display: grid;
   max-width: 1200px;
   margin-top: 10px;
@@ -33,27 +40,21 @@
   margin-right: 10px;
   margin-left: 10px;
 
-  img {
-    width: 100%;
-    height: 100%;
+  
+&__grid{
+  &-1{
+    margin:10px;
+  }
+  &-2{
+    margin:10px;
+  }
+  &-3{
+    margin:10px;
+  }
+  &-4{
+    margin:10px;
   }
 }
-
-.course__grid > div {
-  h2 {
-    margin-bottom: 20px;
-  }
-
-  p,
-  label {
-    font-size: 0.75em;
-  }
-}
-
-.course__grid-1,
-.course__grid-3,
-.course__grid-4 {
-  padding: 10px;
 }
 
 .course__grid-3-content {
@@ -62,28 +63,12 @@
   justify-items: stretch;
   
 
-  div {
-    margin-bottom: 10px;
-  }
-
-  input,
-  select {
-    width: 100%;
-  }
-
 }
 
 .course__grid-4-content {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
 
-  div {
-    margin-bottom: 10px;
-  }
-
-  input {
-    width: 100%;
-  }
   &-cardnumber{
       grid-column:1;
       grid-row:1;
@@ -120,101 +105,20 @@
     grid-column:6/7;
     grid-row:3;
   }
-
-
 }
 
 
 }
-}
+
+
+
 @media(min-width:600px){
-  .course {
-    display: flex;
-    justify-content: center;
-  
-  }
+ 
     .course__grid {
-      display: grid;
-      max-width: 1200px;
-      margin-top: 10px;
+
       grid-template-columns: 50% 50%;
       grid-template-rows: 50% 50%;
-      grid-auto-rows: 100px;
-      grid-gap: 1em;
-      margin-right: 10px;
-      margin-left: 10px;
-    
-      img {
-        width: 100%;
-        height: 100%;
-      }
 
-      &-4-content {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-      
-        div {
-          margin-bottom: 10px;
-        }
-      
-        input {
-          width: 100%;
-        }
-        &-cardnumber{
-            grid-column:1;
-            grid-row:1;
-        }
-        &-cardnumber-input{
-          grid-column:3/7;
-          grid-row:1;
-        }
-        &-cardowner{
-          grid-column:1;
-          grid-row:2;
-        }
-        &-cardowner-input{
-          grid-column:3/7;
-          grid-row:2;
-        }
-        &-col-1{
-          grid-column:1;
-          grid-row:3;
-        }
-        &-col-2{
-          grid-column:3/4;
-          grid-row:3;
-        }
-        &-col-3{
-          grid-column:4/5;
-          grid-row:3;
-        }
-        &-col-4{
-          grid-column:5/6;
-          grid-row:3;
-        }
-        &-col-5{
-          grid-column:6/7;
-          grid-row:3;
-        }
-      
-        
-      }
-      &-3-content {
-        display: grid;
-        grid-template-columns: 33% 67%;
-        justify-items: stretch;
-        
-      
-        div {
-          margin-bottom: 10px;
-        }
-      
-        input,
-        select {
-          width: 100%;
-        }
-      
-      }
     }
     }
   
