--- a/scss/header.scss
+++ b/scss/header.scss
@@ -7,6 +7,7 @@ $whiteText: #fffcf2;
 header {
     background-color: $headerColor;
     font-family: "Oswald", sans-serif;
+
     h1{
         font-size: 3.75em;
         color: $blackText;
@@ -22,6 +23,8 @@ header {
         font-weight: bold;
     }
     .header__row {    
+
+       
             img {
                 height:15px;
             } 
@@ -63,6 +66,7 @@ header {
             font-weight: bold;
         }
         .header__row {    
+         
                 img {
                     height:15px;
                 } 
@@ -121,6 +125,8 @@ header {
             font-weight: bold;
         }
         .header__row {    
+            max-width:1200px;
+            margin:0 10vw;
                 img {
                     height:15px;
                 } 
