--- a/scss/config.scss
+++ b/scss/config.scss
@@ -15,16 +15,20 @@ $transition: all 300ms ease-in-out 0s;
   }
 
   .blue__button {
-   
     background-color: $footerColor;
     color:$blackText;
-    border: 0px;
-    width: 100px;
-    border-radius: 3px;
+    font-size: 12px;
 
-    
+    width: 184px;
+    height: 35px;
+
+    border: 0 solid;
+    border-radius: 3px;
+    transition: background-color 300ms ease-in-out 0s, color 300ms ease-in-out 0s;
   }
   .blue__button:hover{
     background-color: $headerColor;
     color: $footerColor;
+
+    transition: background-color 300ms ease-in-out 0s, color 300ms ease-in-out 0s;
   }
