--- a/scss/forsida.scss
+++ b/scss/forsida.scss
@@ -4,7 +4,7 @@ main{
   margin-bottom:20px;
 }
 .index {
-  font-family: $Open;
+  font-family: "Open Sans", serif;
   /*max-width:1200px;*/
   
   &__card{
@@ -14,18 +14,19 @@ main{
     justify-content: center;
     height: 100%;
     
-    transition: $transition;
+    transition: all 300ms ease-in-out 0s;
   }
   .col1{
     text-align:left;
   }
   &__info {
     width: 100%;
+    height: 100%;
   }
 
   &__img{
     width: 100%;
-    height: auto;
+    height: 100%;
   }
 
   &__title {
@@ -35,7 +36,7 @@ main{
   }
   &__description {
     padding: 40px 0;
-    font-family: $Oswald;
+    font-family: "Oswald", sans-serif;
   }
 }
 
