--- a/scss/staff.scss
+++ b/scss/staff.scss
@@ -11,6 +11,9 @@
     &__card:hover &__about{
         transform: rotateY(180deg);
     }
+    &__card:hover &__img{
+        visibility: hidden;
+    }
     &__img{
         width: 100%;
         height: 100%;
