--- a/scss/forsida.scss
+++ b/scss/forsida.scss
@@ -5,7 +5,7 @@ main{
 }
 .index {
   font-family: "Open Sans", serif;
-  /*max-width:1200px;*/
+  max-width:1200px;
   
   &__card{
     padding-top: 20px;
@@ -37,6 +37,7 @@ main{
   &__description {
     padding: 40px 0;
     font-family: "Oswald", sans-serif;
+    font-size: 25px;
   }
 }
 
