--- a/scss/header.scss
+++ b/scss/header.scss
@@ -3,6 +3,10 @@ $footerColor: #00b7ff;
 $blackText: #000000;
 $whiteText: #fffcf2;
 
+.header__link:hover{
+    color: $whiteText;
+}
+
 @media (max-width: 599px){
     header {
         background-color: $headerColor;
