--- a/scss/course.scss
+++ b/scss/course.scss
@@ -13,11 +13,12 @@
 
   &__title{
   margin-bottom:20px;
-  font-family: 'Oswald', serif;
+  font-family: $Oswald;
   font-size:35px;
 }
 &__text{
-  font-family: 'Open Sans', serif;
+  font-family: $Open;
+  font-size:1.8em;
   
 }
 &__box{
