--- a/scss/staff.scss
+++ b/scss/staff.scss
@@ -6,14 +6,15 @@
         align-items: center;
         width: 100%;
         transform-style: preserve-3d;
-        transition: all 200ms ease-in-out; 
+        transition: all $transition; 
     }
     &__card:hover &__about{
         transform: rotateY(180deg);
+        transition: all $transition; 
     }
     &__card:hover &__img{
         visibility: hidden;
-        transition: all 200ms ease-in-out; 
+        transition: all $transition; 
     }
     &__img{
         width: 100%;
@@ -22,7 +23,7 @@
         backface-visibility: hidden;
     }
     &__person{
-        font-family: "Open Sans", serif;
+        font-family: $Open;
         position: absolute;
         display: block;
         width: 100%;
@@ -32,7 +33,7 @@
         transform: rotateY(180deg);
     }
     &__name {
-        font-family: "Oswald", sans-serif;
+        font-family: $Oswald;
         margin-bottom: 20px;
     }
 }
