--- a/scss/forsida.scss
+++ b/scss/forsida.scss
@@ -1,14 +1,16 @@
 @import "config.scss";
 
 main{
-  margin: $gutter;
+  margin-bottom: 2*$gutter;
+  margin-top: $gutter;
 }
 .index {
   font-family: $Open;
   max-width:1200px;
   
   &__card{
-    padding: $gutter;
+    padding-top: $gutter;
+    padding-bottom: $gutter;
 
     display: flex;
     flex-direction: column;
@@ -17,9 +19,6 @@ main{
     
     transition: all $transition;
   }
-  .col1{
-    text-align:left;
-  }
   &__info {
     width: 100%;
     height: 100%;
@@ -27,7 +26,7 @@ main{
 
   &__img{
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 
   &__title {
@@ -37,7 +36,7 @@ main{
   }
   &__description {
     padding: 40px 0;
-    font-family: $Oswald;
+    font-family: $Open;
     font-size: 24px;
   }
 }
