--- a/scss/course.scss
+++ b/scss/course.scss
@@ -1,11 +1,6 @@
 @import "config.scss"; 
 
-.grid__button{
-  position: relative;
-  left: 46vw;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
+
 
 .course{
   display: flex;
@@ -14,11 +9,10 @@
   &__title{
   margin-bottom:20px;
   font-family: $Oswald;
-  font-size:35px;
+  font-size:25px;
 }
 &__text{
   font-family: $Open;
-  font-size:1.8em;
   
 }
 &__box{
@@ -26,11 +20,22 @@
   width:80%;
   @include rounded;
   padding:10px;
+  &__full{
+  width:100%;
+  @include rounded;
+  padding:10px;
+  }
+}
+&__button{
+  position: relative;
+  left: 46vw;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 &__img {
   width: 100%;
-  height: 100%;
+  height:100%;
 }
   &__grid {
   display: grid;
@@ -93,36 +98,70 @@
     grid-row:3;
   }
   &-col-2{
+    grid-column:2/3;
+    grid-row:3;
+    text-align:center;
+  }
+  &-col-3{
     grid-column:3/4;
     grid-row:3;
   }
-  &-col-3{
+  &-col-4{
     grid-column:4/5;
     grid-row:3;
-  }
-  &-col-4{
-    grid-column:5/6;
-    grid-row:3;
+    text-align:center;
   }
   &-col-5{
-    grid-column:6/7;
+    grid-column:5/6;
     grid-row:3;
+  } 
+}
+
+
+}
+
+@media(max-width:599px){
+  .course{
+    &__button{
+      left:30vw;
+    }
+    &__box{
+      width:100%;
+    }
+    &__text{
+      font-size:1.5em;
+    }
   }
 }
-
-
-}
-
-
 
 @media(min-width:600px){
  
-    .course__grid {
-
+    .course{
+      &__grid {
       grid-template-columns: 50% 50%;
       grid-template-rows: 50% 50%;
+    }
+    &__text{
+      font-size:1.5em;
+    }
+      
+      &__button{
+        left:35vw;
+      }
+    }
+  }
 
-    }
-    }
+@media(min-width:1000px){
+  .course__text{
+    font-size:1.8em;
+  }
+  .course__title{
+    font-size:35px;
+  }
+  .course__button{
+    left:42vw;
+  }
+}
+
   
 
