--- a/scss/forsida.scss
+++ b/scss/forsida.scss
@@ -23,19 +23,17 @@ main{
     width: 100%;
     height: 100%;
   }
-
   &__img{
     width: 100%;
     height: auto;
   }
-
   &__title {
     font-family: $Oswald;
     font-weight: 600;
     font-size: 36px;
   }
   &__description {
-    padding: 40px 0;
+    padding: 2*$gutter 0;
     font-family: $Open;
     font-size: 24px;
   }
