--- a/scss/staff.scss
+++ b/scss/staff.scss
@@ -1,12 +1,14 @@
 @import "config.scss";
 .staff {
+    &__card {
+        transition: all $transition; 
+    }
     &__about {
         display: flex;
-        margin-top: 20px;
+        margin-top: $gutter;
         align-items: center;
         width: 100%;
         transform-style: preserve-3d;
-        transition: all $transition; 
     }
     &__card:hover &__about{
         transform: rotateY(180deg);
@@ -14,7 +16,6 @@
     }
     &__card:hover &__img{
         visibility: hidden;
-        transition: all $transition; 
     }
     &__img{
         width: 100%;
@@ -24,6 +25,7 @@
     }
     &__person{
         font-family: $Open;
+        font-size: 18px;
         position: absolute;
         display: block;
         width: 100%;
@@ -34,7 +36,8 @@
     }
     &__name {
         font-family: $Oswald;
-        margin-bottom: 20px;
+        font-size: 24px;
+        margin-bottom: $gutter;
     }
 }
 
