--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,7 +1,4 @@
-$headerColor: #ff5000;
-$footerColor: #00b7ff;
-$blackText: #000000;
-$whiteText: #fffcf2;
+@import "config.scss";
 
 .header__link:hover{
     color: $whiteText;
@@ -25,6 +22,7 @@ $whiteText: #fffcf2;
                 text-decoration: none;
                 color: $blackText;
                 font-weight: bold;
+                font-family: $Open;
             }
             &__img{
                 height:15px;
@@ -69,6 +67,7 @@ $whiteText: #fffcf2;
                     text-decoration: none;
                     color: $blackText;
                     font-weight: bold;
+                    font-family: $Open;
                 }
                 &__img{
                     height:15px;
@@ -131,6 +130,7 @@ $whiteText: #fffcf2;
                     text-decoration: none;
                     color: $blackText;
                     font-weight: bold;
+                    font-family: $Open;
                 }
                 &__img{
                     height:15px;
