--- a/scss/vorur.scss
+++ b/scss/vorur.scss
@@ -3,6 +3,7 @@
 .takki {
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .titill {
@@ -29,18 +30,8 @@
 .vorur {
   display: flex;
   justify-content: center;
-
   &__row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
     max-width: 1200px;
-    
-  }
-
-  &__col{
-    width: 100%;
-    margin-bottom: 30px;
   }
 }
 
@@ -51,6 +42,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  
   
   
   &__takkastaerd {
@@ -68,8 +60,6 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    padding-right: 10px;
-    padding-left: 10px;
   }
 
   &__uppi {
@@ -84,11 +74,12 @@
 
   &__lysing {
     font-family: $Open;
+    font-size: 21px;
   }
 
   &__verd {
     margin-bottom: 30px;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
     font-family: $Oswald;
   }
@@ -104,6 +95,7 @@
     &__vorur {
       &__fjoldi {
         font-family: $Open;
+        font-size: 21px;
       }
 
       &__fjoldi--input {
@@ -122,6 +114,7 @@
 
         &:hover{
           background-color: $footerColor;
+          border-color: $footerColor;
         }
 
         &--karfa {
@@ -133,10 +126,11 @@
     &__karfa {
       &__fjoldi {
         font-family: $Open;
+        font-size: 21px;
       }
 
       &__fjoldi--input {
-        width: 25%;
+        width: 100px;
         @include rounded;
         padding: 10px;
         margin-right: 10px;
@@ -150,6 +144,7 @@
 
         &:hover{
           background-color: $footerColor;
+          border-color: $footerColor;
         }
 
         &--karfa {
