--- a/scss/forsida.scss
+++ b/scss/forsida.scss
@@ -1,46 +1,58 @@
 @import "config.scss";
 
-main{
-  margin-bottom: 2*$gutter;
-  margin-top: $gutter;
-}
 .index {
+  max-width: 1200px;
+  padding-bottom: 2*$gutter;
   font-family: $Open;
-  max-width:1200px;
-  
-  &__card{
-    padding-top: $gutter;
-    padding-bottom: $gutter;
 
+  &__card {
     display: flex;
+    height: 100%;
+    padding-top: 2*$gutter;
+
     flex-direction: column;
     justify-content: center;
-    height: 100%;
-    
-    transition: all $transition;
+
+    transition: $transition;
   }
+
   &__info {
     width: 100%;
     height: 100%;
   }
-  &__img{
+
+  &__img {
     width: 100%;
     height: auto;
   }
+
   &__title {
     font-family: $Oswald;
+    font-size: 2.25em;
     font-weight: 600;
-    font-size: 36px;
   }
+
   &__description {
     padding: 2*$gutter 0;
     font-family: $Open;
-    font-size: 24px;
+    font-size: 1.5em;
   }
 }
 
-@media(max-width:635px){
-  .col2row1{
+@media (max-width: 635px) {
+  .col2row1 {
     order: -1;
+  }
+}
+
+@media (min-width: 800px) {
+  .index__card {
+    padding-bottom: 2*$gutter;
+  }
+}
+
+@media (min-width: 1500px) {
+  .index__card {
+    padding-bottom: 0;
   }
 }
