--- a/scss/staff.scss
+++ b/scss/staff.scss
@@ -1,43 +1,59 @@
 @import "config.scss";
+
 .staff {
-    &__card {
-        transition: all $transition; 
-    }
+    padding-top: $gutter;
+    padding-bottom: 3*$gutter;
+
     &__about {
         display: flex;
+        width: 100%;
         margin-top: $gutter;
         align-items: center;
-        width: 100%;
         transform-style: preserve-3d;
+        transition: $transition;
     }
-    &__card:hover &__about{
+
+    &__card:hover &__about {
         transform: rotateY(180deg);
-        transition: all $transition; 
     }
-    &__card:hover &__img{
+
+    &__card:hover &__img {
         visibility: hidden;
     }
-    &__img{
+
+    &__img {
         width: 100%;
         height: 100%;
 
         backface-visibility: hidden;
+        transition: $transition;
     }
-    &__person{
-        font-family: $Open;
-        font-size: 18px;
+
+    &__person {
         position: absolute;
         display: block;
         width: 100%;
-        flex-direction: column;
+        font-family: $Open;
+        font-size: 1.125em;
         text-align: center;
+        flex-direction: column;
         backface-visibility: hidden;
         transform: rotateY(180deg);
     }
+
     &__name {
-        font-family: $Oswald;
-        font-size: 24px;
         margin-bottom: $gutter;
+        font-family: $Oswald;
+        font-size: 1.5em;
     }
 }
 
+@media (min-width: 500px) {
+    .staff {
+        padding-top: 0;
+
+        &__card {
+            padding-top: $gutter;
+        }
+    }
+}
